--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -166,61 +166,64 @@
 
                     <!--TODO: Filter node details depending on the click in a specific node-->
                     <!-- BEGIN DYNAMIC ACTIVITY CONTENT (Modal) -->
-                    <div ng-repeat="level in levels">
-                        <div ng-repeat="node in level.nodes | filter:node.node_name = 'Hardware Component Identification'"
+                    <div ng-repeat="(level, nodes) in levels">
+                        <div ng-repeat="node in nodes | filter:node.node_name = 'Hardware Component Identification'"
                              class="nodeTextDetails">
 
                             <!-- If it's a group:  -->
                             <div ng-show="node.children" class="groupBoxText">
-                                <h4 class="groupNameText">< {{ node.name }} ></h4>
+                                <h4 class="groupNameText"> {{ node.node_name }} </h4>
 
                                 <div class="clearfix"></div>
-                                <div ng-repeat="child in node.children">
-                                    <h5 class="nodeNameTextDetails">{{ child.group_child_name }}</h5>
+                                <!-- Children are also in levels: Create unstyled div for each level -->
+                                <div ng-repeat="(childLevel, subChildren) in node.children">
+                                    <div ng-repeat="child in subChildren">
+                                        <h5 class="nodeNameTextDetails">{{ child.group_child_name }}</h5>
 
-                                    <p class="tabText"><i class="icon-home"></i> Modality: <span class="nodeBodyText">{ { activity.modality } }</span>
-                                    </p>
+                                        <p class="tabText"><i class="icon-home"></i> Modality: <span class="nodeBodyText">{ { activity.modality } }</span>
+                                        </p>
 
-                                    <p class="tabText"><i class="icon-time"></i> Duration: <span class="nodeBodyText">{ { activity.dur_mon, activity.dur_dd, activity.dur_hh, activity.dur_min } }</span>
-                                    </p>
+                                        <p class="tabText"><i class="icon-time"></i> Duration: <span class="nodeBodyText">{ { activity.dur_mon, activity.dur_dd, activity.dur_hh, activity.dur_min } }</span>
+                                        </p>
 
-                                    <p class="tabText"><i class="icon-th-large"></i> Students' organization: <span
-                                            class="nodeBodyText">{ { students.type } }</span></p>
+                                        <p class="tabText"><i class="icon-th-large"></i> Students' organization: <span
+                                                class="nodeBodyText">{ { students.type } }</span></p>
 
-                                    <p class="tabText"><i class="icon-facetime-video"></i> Used Technologies: <span
-                                            class="nodeBodyText">{ { technology.name } }</span></p>
+                                        <p class="tabText"><i class="icon-facetime-video"></i> Used Technologies: <span
+                                                class="nodeBodyText">{ { technology.name } }</span></p>
 
-                                    <p class="tabText"><i class="icon-briefcase"></i> Didactical Resources:
-                                    <ul class="listNode">
-                                        <li><i class="icon-chevron-right"></i> Name: <span class="nodeBodyText">{ { resource.name } }</span>
-                                            | Type:<span class="nodeBodyText"> { { resource.type } }</span> | Copyright: <span
-                                                    class="nodeBodyText">{ { resource.copy } }</span> |
-                                            Description: <span
-                                                    class="nodeBodyText">{ { resource.descr } }</span> | Link: <span
-                                                    class="nodeBodyText"><a
-                                                    ng-href="{ { resource.link } }">Link</a></span></li>
-                                        <ul>
-                                            <li><i class="icon-file"></i> Attached Files:</li>
+                                        <p class="tabText"><i class="icon-briefcase"></i> Didactical Resources:
+                                        <ul class="listNode">
+                                            <li><i class="icon-chevron-right"></i> Name: <span class="nodeBodyText">{ { resource.name } }</span>
+                                                | Type:<span class="nodeBodyText"> { { resource.type } }</span> | Copyright: <span
+                                                        class="nodeBodyText">{ { resource.copy } }</span> |
+                                                Description: <span
+                                                        class="nodeBodyText">{ { resource.descr } }</span> | Link: <span
+                                                        class="nodeBodyText"><a
+                                                        ng-href="{ { resource.link } }">Link</a></span></li>
                                             <ul>
-                                                <li>Name: <span class="nodeBodyText">{ { file.name } }</span> |
-                                                    Size: <span
-                                                            class="nodeBodyText">{ { file.size } }</span> |
-                                                    Extension: <span
-                                                            class="nodeBodyText">{ { file.mime } }</span> | Link: <span
-                                                            class="nodeBodyText"><a ng-href="{ { file.uri } }">Link</a></span>
-                                                </li>
+                                                <li><i class="icon-file"></i> Attached Files:</li>
+                                                <ul>
+                                                    <li>Name: <span class="nodeBodyText">{ { file.name } }</span> |
+                                                        Size: <span
+                                                                class="nodeBodyText">{ { file.size } }</span> |
+                                                        Extension: <span
+                                                                class="nodeBodyText">{ { file.mime } }</span> | Link: <span
+                                                                class="nodeBodyText"><a ng-href="{ { file.uri } }">Link</a></span>
+                                                    </li>
+                                                </ul>
                                             </ul>
+
                                         </ul>
+                                        </p>
+                                        <p class="tabText"><i class="icon-info-sign"></i> Activity Description:<br> <span
+                                                class="nodeBodyText">{ { activity.pract_descr } }</span></p>
 
-                                    </ul>
-                                    </p>
-                                    <p class="tabText"><i class="icon-info-sign"></i> Activity Description:<br> <span
-                                            class="nodeBodyText">{ { activity.pract_descr } }</span></p>
+                                        <p class="tabText"><i class="icon-question-sign"></i> Pedagogical
+                                            Suggestions:<br> <span
+                                                    class="nodeBodyText">{ { activity.edu_descr } }</span></p>
 
-                                    <p class="tabText"><i class="icon-question-sign"></i> Pedagogical
-                                        Suggestions:<br> <span
-                                                class="nodeBodyText">{ { activity.edu_descr } }</span></p>
-
+                                    </div>
                                 </div>
                             </div>
                             <!-- End Children -->
