--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -2,6 +2,17 @@
 <div class="row-fluid">
 <div class="span3">
 <div id="sidebar">
+    <div>
+        <a ng-href="#">
+            <!-- TODO: IF liked -> class likedButton, ELSE class likeButton -->
+
+            <div class="likeButton">
+                <!-- TODO: Like button. If the LD is already liked, add class 'icon-white'.-->
+                Like <i class="icon-thumbs-up "></i>
+            </div>
+        </a>
+    </div>
+
     <h4 id="sidebarHeader">General Info</h4>
 
     <div>
@@ -71,13 +82,6 @@
     <!--Sidebar content-->
 
 </div>
-    <!-- TODO: IF liked -> class likedButton, ELSE class likeButton -->
-  <div class="centered">
-    <div class="likeButton">
-        <!-- TODO: Like button. If the LD is already liked, add class 'icon-white'.-->
-        <a ng-href="#" >Like <i class="icon-thumbs-up "></i></a>
-    </div>
-                        </div>
 </div>
 
 
