dynamic class for node children

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -482,12 +482,14 @@ input.sidebarInput {
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
 }
 
-.ldBox .actName h6 {
+.ldBox .actName h6, .ldBox h6.actName {
     color: #990000;
     background: #FFFFFF;
     border: 1px dashed #0099CC;
     line-height: 14px;
     padding: 2px 0;
+    width: 96%;
+    margin: 5px auto;
 }
 
 .levelBox {
@@ -559,19 +561,16 @@ input.sidebarInput {
 
 .groupBox1  .actBox, .groupBox1 .ldBox {
     width: 85%;
-    background-color: #990000;
 
 }
 
 .groupBox2 .actBox, .groupBox2 .ldBox {
     width: 42%;
-    background-color: #00A000;
 }
 
 .groupBox3 .actBox, .groupBox3 .ldBox {
     width: 27%;
-    background-color: #00A000;
-}
+    }
 
 .actLabel {
     font-size: 11px;
@@ -1576,12 +1575,10 @@ input[type="checkbox"] {
 
     .groupBox3 .actBox, .groupBox3 .ldBox {
         width: 24%;
-        background-color: #00A000;
     }
 
     .groupBox2 .actBox, .groupBox2 .ldBox {
         width: 34%;
-        background-color: #00A000;
     }
 }
 
