add org label to activities in groups

--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -137,7 +137,7 @@
                                 <!-- FIXME Convert static data to dynamic -->
                                 <div class="actLabel">
                                     <span class="timeLabel"><i class="icon-time icon-white"></i> 15 min </span>
-                                    <span class="orgLabel"><i class="icon-th-large icon-white"></i> ALL</span>
+                                    <span class="orgLabel"><i class="icon-th-large icon-white"></i> {{ child.org_label}}</span>
                                 </div>
                             </a>
                         </div>
