add org label as students type for teacher and student views

--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -191,7 +191,7 @@
                                         </p>
 
                                         <p class="tabText"><i class="icon-th-large"></i> Students' organization: <span
-                                                class="nodeBodyText">{ { students.type } }</span></p>
+                                                class="nodeBodyText">{{ child.org_label }}</span></p>
 
                                         <p class="tabText"><i class="icon-facetime-video"></i> Used Technologies: <span
                                                 class="nodeBodyText">{ { technology.name } }</span></p>
@@ -243,7 +243,7 @@
                                 </p>
 
                                 <p class="tabText"><i class="icon-th-large"></i> Students' organization: <span
-                                        class="nodeBodyText">{ { students.type } }</span></p>
+                                        class="nodeBodyText">{{ node.org_label }}</span></p>
 
                                 <p class="tabText"><i class="icon-facetime-video"></i> Used Technologies: <span
                                         class="nodeBodyText">{ { technology.name } }</span></p>
@@ -329,7 +329,7 @@
                                 </p>
 
                                 <p class="tabText"><i class="icon-th-large"></i> Students' organization: <span
-                                        class="nodeBodyText">{ { students.type } }</span></p>
+                                        class="nodeBodyText">{{ child.org_label }}</span></p>
 
                                 <p class="tabText"><i class="icon-facetime-video"></i> Used Technologies: <span
                                         class="nodeBodyText">{ { technology.name } }</span></p>
@@ -375,7 +375,7 @@
                         </p>
 
                         <p class="tabText"><i class="icon-th-large"></i> Students' organization: <span
-                                class="nodeBodyText">{ { students.type } }</span></p>
+                                class="nodeBodyText">{{ node.org_label }}</span></p>
 
                         <p class="tabText"><i class="icon-facetime-video"></i> Used Technologies: <span
                                 class="nodeBodyText">{ { technology.name } }</span></p>
@@ -451,7 +451,7 @@
                                 </p>
 
                                 <p class="tabText"><i class="icon-th-large"></i> Students' organization: <span
-                                        class="nodeBodyText">{ { students.type } }</span></p>
+                                        class="nodeBodyText">{{ child.org_label }}</span></p>
 
                                 <p class="tabText"><i class="icon-facetime-video"></i> Used Technologies: <span
                                         class="nodeBodyText">{ { technology.name } }</span></p>
@@ -494,7 +494,7 @@
                         </p>
 
                         <p class="tabText"><i class="icon-th-large"></i> Students' organization: <span
-                                class="nodeBodyText">{ { students.type } }</span></p>
+                                class="nodeBodyText">{{ node.org_label }}</span></p>
 
                         <p class="tabText"><i class="icon-facetime-video"></i> Used Technologies: <span
                                 class="nodeBodyText">{ { technology.name } }</span></p>
