--- a/client/views/index.html
+++ b/client/views/index.html
@@ -117,6 +117,8 @@
 <script src="/js/ld/HomeService.js"></script>
 <script src="/js/ld/LearningDesignController.js"></script>
 <script src="/js/ld/LearningDesignService.js"></script>
+<script src="/js/ld/UserController.js"></script>
+<script src="/js/ld/UserService.js"></script>
 
 <!-- Bootstrap -->
 <script src="/js/lib/jquery.js"></script>
