js folders organization

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -118,8 +118,8 @@
 <script src="/js/ld/LearningDesignController.js"></script>
 <script src="/js/ld/LearningDesignService.js"></script>
 <script src="/js/ld/ActivityFilter.js"></script>
-<script src="/js/ld/UserController.js"></script>
-<script src="/js/ld/UserService.js"></script>
+<script src="/js/user/UserController.js"></script>
+<script src="/js/user/UserService.js"></script>
 
 <!-- Bootstrap -->
 <script src="/js/lib/jquery.js"></script>
